--- a/wk1/keypadSchool/app/src/main/res/layout/activity_main.xml
+++ b/wk1/keypadSchool/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,11 @@
     tools:layout_editor_absoluteY="81dp">
 
     <EditText
-        android:id="@+id/phoneNumberDisplay"
+        android:id="@+id/phoneNumberField"
         android:layout_width="0dp"
         android:layout_height="66dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="phone"
         android:textAlignment="center"
         android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,7 +22,7 @@
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="55dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
@@ -32,12 +32,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneNumberDisplay" />
+        app:layout_constraintTop_toBottomOf="@+id/phoneNumberField" />
 
     <Button
         android:id="@+id/button5"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="55dp"
         android:layout_marginTop="16dp"
         android:text="5"
         android:textSize="24sp"
@@ -48,7 +48,7 @@
     <Button
         android:id="@+id/button8"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="55dp"
         android:layout_marginTop="16dp"
         android:text="8"
         android:textSize="24sp"
@@ -59,7 +59,7 @@
     <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="55dp"
         android:layout_marginStart="8dp"
         android:text="3"
         android:textSize="24sp"
@@ -69,7 +69,7 @@
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="55dp"
         android:layout_marginEnd="8dp"
         android:text="1"
         android:textSize="24sp"
@@ -79,7 +79,7 @@
     <Button
         android:id="@+id/button4"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="55dp"
         android:layout_marginEnd="8dp"
         android:text="4"
         android:textSize="24sp"
@@ -89,7 +89,7 @@
     <Button
         android:id="@+id/button6"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="55dp"
         android:layout_marginStart="8dp"
         android:text="6"
         android:textSize="24sp"
@@ -99,7 +99,7 @@
     <Button
         android:id="@+id/button7"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="55dp"
         android:layout_marginEnd="8dp"
         android:text="7"
         android:textSize="24sp"
@@ -109,7 +109,7 @@
     <Button
         android:id="@+id/button9"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="55dp"
         android:layout_marginStart="8dp"
         android:text="9"
         android:textSize="24sp"
@@ -117,13 +117,13 @@
         app:layout_constraintStart_toEndOf="@+id/button8" />
 
     <Button
-        android:id="@+id/button29"
+        android:id="@+id/buttonCall"
         android:layout_width="0dp"
-        android:layout_height="92dp"
+        android:layout_height="80dp"
         android:layout_marginTop="40dp"
         android:text="Call"
         android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="@+id/buttonDies"
+        app:layout_constraintEnd_toEndOf="@+id/buttonHash"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/buttonAsterix"
         app:layout_constraintTop_toBottomOf="@+id/button0" />
@@ -131,7 +131,7 @@
     <Button
         android:id="@+id/buttonAsterix"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="55dp"
         android:layout_marginEnd="8dp"
         android:text="*"
         android:textSize="24sp"
@@ -141,7 +141,7 @@
     <Button
         android:id="@+id/button0"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="55dp"
         android:layout_marginTop="16dp"
         android:text="0"
         android:textSize="24sp"
@@ -150,9 +150,9 @@
         app:layout_constraintTop_toBottomOf="@+id/button8" />
 
     <Button
-        android:id="@+id/buttonDies"
+        android:id="@+id/buttonHash"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="55dp"
         android:layout_marginStart="8dp"
         android:text="#"
         android:textSize="24sp"
