Finished all important features of wk1 Phone App program

--- a/wk1/PhoneApp/app/src/main/res/layout/activity_start.xml
+++ b/wk1/PhoneApp/app/src/main/res/layout/activity_start.xml
@@ -28,4 +28,16 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/browserBtn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:text="@string/broserButton"
+        app:layout_constraintBottom_toTopOf="@+id/dialerBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
