--- a/wk6/InternalStorage/app/src/main/res/layout/activity_main.xml
+++ b/wk6/InternalStorage/app/src/main/res/layout/activity_main.xml
@@ -64,4 +64,17 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/multiline_text_field" />
 
+    <Switch
+        android:id="@+id/storage_switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/storage_more_switch"
+        app:layout_constraintBottom_toTopOf="@+id/button_clear"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/filename_text_field"
+        app:layout_constraintVertical_bias="0.132" />
+
 </android.support.constraint.ConstraintLayout>
